[gd_scene load_steps=3 format=3 uid="uid://cgff50s8exjob"]

[ext_resource type="Script" path="res://Scripts/billboard_sprite.gd" id="1_ynv2m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kh5jt"]

[node name="BillboardSprite" type="Node3D"]
script = ExtResource("1_ynv2m")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1

[node name="Area3D" type="Area3D" parent="Sprite3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sprite3D/Area3D"]
shape = SubResource("BoxShape3D_kh5jt")

[connection signal="input_event" from="Sprite3D/Area3D" to="." method="_on_area_3d_input_event"]
